Graph complete, need to finish the Org chart

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
         <div class="header-container">
             <h1>San Diego Government Chart</h1>
             <p class="subtitle">Interactive visualization of San Diego's government structure</p>
+            <nav class="view-nav">
+                <a href="index.html" class="nav-link active">Network View</a>
+                <a href="orgchart.html" class="nav-link">Org Chart View</a>
+            </nav>
         </div>
     </header>
 
